--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -6,7 +6,7 @@ http {
 	server {
 		listen 80 default;
 		location ^~ \Q/uploads/\E\w+ {
-			root /home/box/web/uploads;
+			root /home/box/web/;
 		}
     		
     		location / {
