--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,9 @@
-                           
-http {
+
+events {                                                                        
+	worker_connections 4096;
+}                              
+
+http{
 	server {
 		listen 80 default;
 		location ~* \Q/uploads/\E\w+ {
