--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -12,6 +12,11 @@ http{
     		location / {
       			return 404;
     		}
+    		location /hello/ {
+			proxy_pass       http://localhost:8080;
+			proxy_set_header Host      $host;
+			proxy_set_header X-Real-IP $remote_addr;
+		}    		
     		location ~* ^.+\.\w+$ {
       			root /home/box/web/public;
     		}
